--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
     <!-- stylesheet for bootstrap --->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+
     <!--- Mdbootstrap.css
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.6.1/css/mdb.min.css" rel="stylesheet"> ---------->
 </head>
@@ -44,7 +45,7 @@
                 </li>
                 <li class="nav-item">
                     <!-- Contavt Section Jump -->
-                    <a class="nav-link" href="#">Contact Us</a>
+                    <a class="nav-link" href="/users/register">Register</a>
                 </li>
             </ul>
         </div>
