Re-styled the policy page, added link to policy page in footer

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -80,6 +80,10 @@
                             <!--- Link to GITHUB page --->
                             <a href="#"> Pro.js</a>
                         </li>
+                        <li class="nav-item">
+                            <!--- Link to ABOUT US page --->
+                            <a href="/users/policy"> Our Policy</a>
+                        </li>
                     </ul>
                 </div>
             </div>
