--- a/views/register.hbs
+++ b/views/register.hbs
@@ -32,7 +32,7 @@
             <div class="form-group grp4 row justify-content-center">
                 <div class="col-lg-6">
                     <label for="password"> Re-enter Password</label>
-                    <input type="passwordConfirm" class="form-control" id="passwordConfirmInput" aria-describedby="passwordInput" placeholder="Confirm the password">
+                    <input type="password" class="form-control" id="passwordConfirmInput" aria-describedby="passwordInput" placeholder="Confirm the password">
                 </div>
             </div>
             <!-- button submit -->
