Google api that isnt working

--- a/functions/views/index.hbs
+++ b/functions/views/index.hbs
@@ -114,7 +114,7 @@
     <p class="topBtn"> Still Reading This? Sign Up Today</p>
 </div>
 <div class="row justify-content-center">
-    <button type="button" onclick="location.href='/users/register';" class="btn btn-dark btn-lg">Sign Up</button>
+    <button type="button" onclick="startGoogle()" class="btn btn-dark btn-lg">Sign Up</button>
 
 </div>
 <!--- Butten section END --->
