--- a/functions/views/interfacePage.hbs
+++ b/functions/views/interfacePage.hbs
@@ -1,4 +1,15 @@
 <div class="container">
     <br><br>
     <header class="pt-5"> HELLO WORLD</header>
+    <button id="sign-in-or-out-button"
+        style="margin-left: 25px">Sign In/Authorize</button>
+<button id="revoke-access-button"
+        style="display: none; margin-left: 25px">Revoke access</button>
+
+<div id="auth-status" style="display: inline; padding-left: 25px"></div><hr>
 </div>
+<script type="text/javascript" src="/javascripts/interfacePage.js"></script>
+<script async defer src="https://apis.google.com/js/api.js" 
+        onload="this.onload=function(){};handleClientLoad()" 
+        onreadystatechange="if (this.readyState === 'complete') this.onload()">
+</script>
