--- a/functions/views/layouts/layout.handlebars
+++ b/functions/views/layouts/layout.handlebars
@@ -3,6 +3,8 @@
 
 <head>
     <title>{{title}}</title>
+    <!-- Ownership of domain proof DO NOT REMOVE -->
+    <meta name="google-site-verification" content="RDdN42t-Bwzu3kAy6sBu-fEpf9rwiDedTdgzUyGIh3w" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--- main stylesheet -->
@@ -111,6 +113,10 @@
     <!---- Mdbootstrap.js
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.6.1/js/mdb.min.js"></script>----->
 
+    <!-- Firebase.js -->
+     <script type="text/javascript" src="https://cdn.firebase.com/js/client/2.2.7/firebase.js"></script>
+    <!--Google Handle Client Load -->
+    <script type="text/javascript" src="https://apis.google.com/js/client.js?onload=handleClientLoad"></script>
     <!-- main Javascript file ---->
     <script src="/javascripts/main.js"></script>
     <!----------------------  END - LINKS ---------------------------------->
