--- a/functions/views/interfacePage.hbs
+++ b/functions/views/interfacePage.hbs
@@ -8,6 +8,10 @@
 
 <div id="auth-status" style="display: inline; padding-left: 25px"></div><hr>
 </div>
+<div>
+    <progress value="0" max = "100" id = "uploader">0%</progress>
+    <input type="file" value="upload" id="fileButton"/>
+</div>
 <script type="text/javascript" src="/javascripts/interfacePage.js"></script>
 <script async defer src="https://apis.google.com/js/api.js" 
         onload="this.onload=function(){};handleClientLoad()" 
