--- a/functions/views/layouts/layout.handlebars
+++ b/functions/views/layouts/layout.handlebars
@@ -117,6 +117,10 @@
      <script type="text/javascript" src="https://cdn.firebase.com/js/client/2.2.7/firebase.js"></script>
     <!--Google Handle Client Load -->
     <script type="text/javascript" src="https://apis.google.com/js/client.js?onload=handleClientLoad"></script>
+    <!-- Firebase SDK -->
+    <script src="https://www.gstatic.com/firebasejs/5.8.2/firebase.js"></script>
+    <!-- Storage Javascript file -->
+    <script src="/javascripts/storage.js"></script>
     <!-- main Javascript file ---->
     <script src="/javascripts/main.js"></script>
     <!----------------------  END - LINKS ---------------------------------->
