--- a/functions/views/login.hbs
+++ b/functions/views/login.hbs
@@ -1,5 +1,5 @@
 <div class="container-fluid formRegister">
-    <form>
+    <form id="log-form">
         <div class="form-group headingLabel text-center">
             <header>Sign In</header><br>
         </div>
@@ -7,8 +7,8 @@
             <!-- username -->
             <div class="form-group grp1 row justify-content-center">
                 <div class="col-lg-6 column">
-                    <label for="username"> Username</label>
-                    <input type="username" class="form-control" id="usernameInput" placeholder="@Username">
+                    <label for="email"> Email</label>
+                    <input type="email" class="form-control" id="emailInput" placeholder="me@email.com">
                 </div>
             </div>
             <!-- password --->
