Added Logout and revoke accessToken

--- a/functions/views/interfacePage.hbs
+++ b/functions/views/interfacePage.hbs
@@ -43,6 +43,10 @@
         style="margin-left: 25px">Transfer to Firebase</button>
 <button onclick="downloadFile();"
         style="margin-left: 25px">Download</button>
+        <button onclick="revokeDB();"
+        style="margin-left: 25px">RevokeAccess</button>
+        <button onclick="logoutDB();"
+        style="margin-left: 25px">Logout</button>
 <div><p id = 'results'></p></div>
 </div>
 <script
