Javascript changed to JQuery +pCloud

--- a/functions/views/interfacePage.hbs
+++ b/functions/views/interfacePage.hbs
@@ -37,6 +37,7 @@
     <p>Pick a file to upload to DropBox</p>
     <input type="file" value="upload" id="uploadToDB"/>
 </div>
+<div id="pcloudfiles"></div>
 <button onclick="deleteFile();"
         style="margin-left: 25px">Delete</button>
         <button onclick="transferFile();"
@@ -46,8 +47,12 @@
         <button onclick="revokeDB();"
         style="margin-left: 25px">RevokeAccess</button>
         <button onclick="logoutDB();"
-        style="margin-left: 25px">Logout</button>
+        style="margin-left: 25px">Logout</button><button onclick="initPCloud();"
+        style="margin-left: 25px">PCloud Login</button>
+        <button id="pcloudtoken">Get Token(redirect)</button>
+  <button id="pcloudtokken">Get Token(poll)</button>
 <div><p id = 'results'></p></div>
+
 </div>
 <script
   src="https://code.jquery.com/jquery-3.3.1.js"
@@ -57,8 +62,10 @@
 <script type="text/javascript" src="https://www.dropbox.com/static/api/2/dropins.js" id="dropboxjs" data-app-key="1qwuqul2z1v27e1"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/dropbox.js/4.0.16/Dropbox-sdk.js"></script> 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/fetch/2.0.3/fetch.js"></script>
+<script type="text/javascript" src="https://unpkg.com/pcloud-sdk-js@latest/dist/pcloudsdk.js"></script>
 <script src="/javascripts/utils.js"></script>
 <script type="text/javascript" src="/javascripts/interfacePage.js"></script> 
+<script type="text/javascript" src="/javascripts/box.js"></script> 
 <script async defer src="https://apis.google.com/js/api.js" 
         onload="this.onload=function(){};handleClientLoad()" 
         onreadystatechange="if (this.readyState === 'complete') this.onload()">
