--- a/functions/views/layouts/layout.handlebars
+++ b/functions/views/layouts/layout.handlebars
@@ -25,8 +25,8 @@
 <body>
     <!----------- NAVBAR ----------------->
 
-    <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top shadow p-3 mb-5" style="background-color: rgba(0, 0, 0,0.95); color:#7F7B82;">
-        <a class="navbar-brand" href="/"><img class="logoIMG" src="/images/CloudLogo.png" width="20%">Cloud</a>
+    <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top shadow" style="background-color:#2D2D35;">
+        <a class="navbar-brand" href="/"><img class="logoIMG" src="/images/logo.png" width="50%"></a>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -39,8 +39,7 @@
                 <li class="nav-item">
 
                     <!-- about us link --->
-
-                    <a class="nav-link" href="/aboutUs">About Us</a>
+                <a class="nav-link" href="/aboutUs">About Us</a>
                 </li>
                 <li id="btnSI" class="nav-item">
                     <a class="nav-link" href="/users/login">Sign In</a>
